# chess_rust

./: Cargo.toml  README.md  baza.sql  co nie działa (nie działa w chuj rzeczy).txt  demo_chess.sql  web_app_rust.sql
src/: auth.rs  db.rs  game.rs  main.rs  models.rs  routes.rs  ws.rs
static/css/: auth.css  chess.css  games.css  home.css  statistics.css  style.css  style_logged_in.css
static/js/: chess.js  chess_logic.js  chess_ui.js  register.js  script.js  script_logged_in.js  ws.js
templates/: base.html  chess.html  games.html  home.html  index.html  login.html  person.html  register.html  statistics.html
