[package]
name = "web_app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-web = "4.10.2"
actix-web-actors = "4.3.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["chrono", "mysql", "runtime-async-std", "runtime-tokio", "time"] }
tera = "1.20.0"
time = "0.3.41"
tokio = "1.45.0"
actix-rt = "2.7.0"
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
actix-identity = "0.8.0"