[package]
name = "web_app"
version = "0.1.0"
edition = "2024"

[profile.dev]
incremental = true

[dependencies]

actix = "0.13.5"

actix-files = "0.6.6"
actix-web = { version = "4.11.0", features = ["cookies", "macros"] } 

actix-web-actors = "4.3.0"

chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

sqlx = { version = "0.8.3", features = ["chrono", "mysql", "runtime-tokio"] }

tera = "1.20.0"

time = "0.3.41"

tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }

argon2 = "0.5"

actix-utils = "3"

actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
actix-session = { version = "0.10.1", features = ["cookie-session"] }
jsonwebtoken = "9.3.1"
futures = "0.3.31"
chess = "3.2.0"
